<resources>
    <string name="hot_txt">Click here if you think I\'m hot</string>
    <string name="hot">Hot</string>
    <string name="last_update_txt">Last Update:</string>
    <string name="vote_confirm_txt">confirm your voters</string>
    <string name="vote_txt">Click here to create a vote</string>
    <string name="send_msg_to_voters_txt">Send message to voters</string>
    <string name="vote_btn">vote</string>
    <string name="connect_btn">connect</string>
    <string name="referr_txt">referr</string>
    <string name="chat_txt">chat</string>
    <string name="decline_btn">decline</string>
    <string name="messages_txt">messages</string>
    <string name="referrals_txt">referrals</string>
    <string name="connects_btn">connects</string>
    <string name="view_votes_txt">view votes</string>
    <string name="voting_in_progress_txt">Voting In Progress</string>
    <string name="app_name">AfterYou</string>
    <string name="action_settings">Settings</string>
    <string name="search_txt">Search</string>
    <string name="after_you_friends_txt">friends</string>
    <string name="contacts_txt">contacts</string>
    <string name="twitter_txt">twitter</string>
    <string name="made_referrel_txt">Made a referral to you</string>
    <string name="photos_txt">photos</string>
    <string name="video_txt">video</string>
    <string name="send_gift_txt">send gift</string>
    <string name="comment_txt">comment</string>
    <string name="reset_pass">How do I reset my password?</string>
    <string name="change_profile_pic">How do i change my profile pic?</string>
    <string name="my_circle">How do I add to My Circle?</string>
    <string name="people_recommend">How many people can I recommend to?</string>
    <string name="setting_txt">settings</string>
    <string name="import_txt">import</string>
    <string name="help_center_txt">help center</string>
    <string name="terms_policies_txt">terms &amp; policies</string>
    <string name="logout_txt">logout</string>
    <string name="null_txt"></string>
    <string name="profile_setting">profile settings</string>
    <string name="privacy_setting">privacy settings</string>
    <string name="blocking">blocking</string>
    <string name="notifications">notifications</string>
    <string name="statement_of_rights">Statement of Rights &amp; Responsobilities</string>
    <string name="terms_you_agree">Terms you agree when joining After You</string>
    <string name="data_use_policies">Data Use Policy</string>
    <string name="information_we_recive">Information we receive and howm it\'s used</string>
    <string name="community_std">Community Standards</string>
    <string name="whats_not_allowed">What\'s not allowed and how to report abuse</string>
    <string name="my_stuff_txt">who can see my stuff?</string>
    <string name="contact_me">who can contact me?</string>
    <string name="future_post">who can see my future posts?</string>
    <string name="review_post">how do i review my posts?</string>
    <string name="public_txt">public</string>
    <string name="friends_txt">friends</string>
    <string name="prospects_txt">prospects</string>
    <string name="family_txt">family</string>
    <string name="only_me_txt">only me</string>
    <string name="privacy_info_msg">You can manage the privacy of things you share\nby using the audience selector right where you\npost. This control remembers your selection so\nfuture posts will be shared with the same\naudience unless you change it.</string>
    <string name="block_someone_txt">how do I block someone?</string>
    <string name="report_abuse_txt">how do I report abuse?</string>
    <string name="blocking_info_msg">Once you block someone, that person can no\nlonger see things you post on your profile,\nconnect, send gifts or start a chart.</string>
    <string name="type_profile_name_txt">type profile name</string>
    <string name="block_txt">block</string>
    <string name="unblock_txt">unblock</string>
    <string name="report_abuse_info_msg">In order to report abuse please type in your \nname, email, abuser’s profile name and leave us \na message. One of our representatives will be \ncontacting you shortly to create a resolution.</string>
    <string name="user_name_txt">your name</string>
    <string name="user_email_txt">email</string>
    <string name="abusers_proile_name_txt">abuser\'s profile name</string>
    <string name="write_comment_txt">write a comment</string>
    <string name="report_abuse_btn">report abuse</string>
    <string name="write_msg_txt_report_abuse">Message</string>
    <string name="text_msg">text message</string>
    <string name="registered_phones">registered phones</string>
    <string name="remove_txt">remove</string>
    <string name="text_msging_txt">text messaging</string>
    <string name="text_notification">text notifications:</string>
    <string name="control_info">control how you receive text\nmessages when somebody\nsends you a message on\nafteryou.</string>
    <string name="web_or_mobile_txt">When someone sends me a message on\nweb or mobile</string>
    <string name="mobile">when someone sends me a message on\nmobile</string>
    <string name="never_txt">Never</string>
    <string name="daily_txt_limit">daily text limit</string>
    <string name="unlimited_txt">unlimited</string>
    <string name="one_txt">1</string>
    <string name="five_txt">5</string>
    <string name="ten_txt">10</string>
    <string name="fifteen_txt">15</string>
    <string name="twenty_txt">20</string>
    <string name="twenty_five_txt">25</string>
    <string name="thirty_txt">30</string>
    <string name="thirty_five_txt">35</string>
    <string name="forty_txt">40</string>
    <string name="forty_five_txt">45</string>
    <string name="fifty_txt">50</string>
    <string name="notification_by">receive notifications by</string>
    <string name="notification_for">receive notifications for</string>
    <string name="mobile_push_txt">mobile push</string>
    <string name="text_messages">text message</string>
    <string name="after_you_head_txt">You’ll see every notification on afteryou but you\ncan turn off notifictions about specific posts as\nyou view them.</string>
    <string name="adjust_txt">to adjust your notifications form\nyour settings.</string>
    <string name="one_text">1.  Tap</string>
    <string name="btn_txt">button</string>
    <string name="two_txt">2.  Select</string>
    <string name="third_txt">3.  From here you can edit the messages you will\nreceieve by email, mobile push and text\nmessage.</string>
    <string name="all_notification_txt">All notifications, expect the ones you \nunsubscribe from.</string>
    <string name="import_notification_txt">Important notifications about you or \nactivity you’ve missed.</string>
    <string name="only_notification">Only notifications about your account, \nsecurity and privacy.</string>
    <string name="email_hint">email</string>
    <string name="login_txt">Login</string>
    <string name="signup_txt">sign up</string>
    <string name="sign_up_using_fb">Register with Facebook</string>
    <string name="register_using_email">Register with Email</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">register\?</string>
    <string name="lets_sign">Let\'s Sign you up&#x21;</string>
    <string name="facebook_txt">facebook</string>
    <string name="library_txt">library</string>
    <string name="after_you_txt">afteryou</string>
    <string name="take_photo_txt">Take Photo</string>
    <string name="cancelTxt">cancel</string>
    <string name="IDS_PROFILE_PIC_LABEL">Profile Pic Setup</string>
    <string name="IDS_NO_PIC_CHOSEN">No Picture has Been Chosen.</string>
    <string name="doneTxt">done</string>
    <string name="choose_from_facebook">Choose From Facebook</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="edit_txt">edit picture</string>
    <string name="edit_caps">Edit</string>
    <string name="sponsor_txt">Sponsor</string>
    <string name="edit_small">edit</string>
    <string name="in_txt">In </string>
    <string name="from_txt">From </string>
    <string name="activity_log_txt">activity log</string>
    <string name="activity_log_sub_txt">Only you can see your activity log.</string>
    <string name="filter_txt">filter</string>
    <string name="votes_txt">votes</string>
    <string name="comments_filter_txt">comments</string>
    <string name="refferals_txt">refferals</string>
    <string name="gifts_txt">gifts</string>
    <string name="birthdays_txt">birthdays</string>
    <string name="activity_txt">activity you’ve missed</string>
    <string name="congrates_txt">Congrats! its approved.</string>
    <string name="slogan_txt">Your one step closer to your dream guy</string>
    <string name="voted_not">Voted \"Not\"</string>
    <string name="voted_hot">Voted \"Hot\"</string>
    <string name="no_vote">No Vote</string>
    <string name="choose_from_library_txt">Choose From Library</string>
    <string name="IDS_ROTATE">Rotate</string>
    <string name="IDS_ENHANCE">Enhance</string>
    <string name="IDS_REDEYE">Red Eye</string>
    <string name="IDS_CROP">Crop</string>
    <string name="profile_setup_txt">Profile Setup</string>
    <string name="change_name_txt">change name</string>
    <string name="save_txt">To save this setting please enter your password</string>
    <string name="save_btn">save</string>
    <string name="primary_email">primary email</string>
    <string name="afteryou_email">afteryou email</string>
    <string name="email_msg">Your afteryou email is based on your public\nusername. Email sent to this address goes to\nafteryou messages.</string>
    <string name="change_email">change email</string>
    <string name="change_password">change password</string>
    <string name="current_password">current password</string>
    <string name="retype_password">re-type new password</string>
    <string name="new_password">new password</string>
    <string name="name_txt">name</string>
    <string name="gender_txt">gender</string>
    <string name="please_note_txt">Please note:</string>
    <string name="learn_more_txt">Learn more...</string>
    <string name="change_name_info">Please note: you can only change your name 4\nmore times, so make sure to use your real name.\nDon’t addany unusual capitalizatio, punctuation,\ncharacters or random words. Learn more...</string>
    <string name="type_password">type your password</string>
    <string name="date_of_birth_txt">Date Of Birth</string>
    <string name="password_validation_txt">6&#8211;8 Characters required</string>
    <string name="about_txt">about you</string>
    <string name="required_field">Required Field</string>
    <string name="your_ideal_txt">your ideal match</string>
    <string name="submit_txt">Submit</string>
    <string name="password_hint">password</string>
    <string name="male_text">male</string>
    <string name="female_text">female</string>
    <string name="birth_day_hint_txt">m / dd / yy</string>
    <string name="email_txt">email</string>
    <string name="password_txt">password</string>
    <string name="first_name_text_hint">first name</string>
    <string name="last_name_text_hint">last name</string>
    <string name="email_name_text">eMail</string>
    <string name="birth_day_text">birthdate</string>
    <string name="password_text">password</string>
    <string name="confirm_password_text">confirm password</string>
    <string name="no_images_txt">No images in gallary!</string>
    <string name="notification_txt">Notifications</string>
    <string name="IDS_MESSAGE">Message</string>
    <string name="write_msg_txt">Message&#8230;</string>
    <string name="post_txt">Post</string>
    <string name="basic" >basic</string>
    <string name="luxary" >luxary</string>
    <string name="deluxe" >deluxe</string>
    <string name="premium" >premium</string>
    <string name="five_thousand" >5,000 points</string>
</resources>