<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cancel_btn_afteryou_notif"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/lay_margine"
        android:text="@string/cancelTxt"
        android:textColor="@color/font_blue_color"
        android:textSize="18sp" />

    <View
        android:id="@+id/cancel_btn_divider_afteryou_notif"
        android:layout_width="match_parent"
        android:layout_height="0.50dp"
        android:layout_below="@id/cancel_btn_afteryou_notif"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/setting_txt_afteryou_notif"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/cancel_btn_divider_afteryou_notif"
        android:background="@color/setting_color"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/lay_margine"
        android:text="@string/after_you_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="19sp" />

    <View
        android:id="@+id/setting_divider_afteryou_notif"
        android:layout_width="match_parent"
        android:layout_height="0.50dp"
        android:layout_below="@id/setting_txt_afteryou_notif"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/privacy_info_afteryou_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_divider_afteryou_notif"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5.0sp"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/lay_margine"
        android:paddingRight="@dimen/lay_margine"
        android:paddingTop="20dp"
        android:text="@string/after_you_head_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="14sp" />

    <View
        android:id="@+id/privacy_divider_afteryou_notif"
        android:layout_width="match_parent"
        android:layout_height="0.50dp"
        android:layout_below="@id/privacy_info_afteryou_notif"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/adjust_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/privacy_divider_afteryou_notif"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="5.0sp"
        android:paddingLeft="@dimen/lay_margine"
        android:paddingRight="@dimen/lay_margine"
        android:text="@string/adjust_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/one_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/adjust_txt"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/lay_margine"
        android:text="@string/one_text"
        android:textColor="@color/font_blue_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tab_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/adjust_txt"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/one_txt"
        android:drawableLeft="@drawable/list_icon"
        android:drawablePadding="8dp"
        android:paddingLeft="8dp"
        android:text="@string/btn_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/two_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_img"
        android:layout_marginTop="12dp"
        android:paddingLeft="@dimen/lay_margine"
        android:text="@string/two_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/notification_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_img"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/two_txt"
        android:paddingLeft="3dp"
        android:text="@string/notification_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/third_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_txt"
        android:layout_marginTop="12dp"
        android:paddingLeft="@dimen/lay_margine"
        android:text="@string/third_txt"
        android:textColor="@color/font_blue_color"
        android:textSize="14sp" />

</RelativeLayout>