<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white" >

    <Button
        android:id="@+id/gifts_list_buy_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/text_selected_states"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/cancelTxt" />

    <ImageView
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gifts_list_buy_cancel_button"
        android:background="@drawable/area_dark_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:weightSum="1"
        android:id="@+id/gift_parent"
        android:layout_below="@id/divider_one" >

        <TextView
            android:id="@+id/basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/gift_icon"
            android:gravity="center"
            android:text="@string/basic" />

        <TextView
            android:id="@+id/deluxe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/gift_icon"
            android:gravity="center"
            android:text="@string/deluxe" />

        <TextView
            android:id="@+id/premimum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/gift_icon"
            android:gravity="center"
            android:text="@string/premium" />

        <TextView
            android:id="@+id/luxary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/gift_icon"
            android:gravity="center"
            android:text="@string/luxary" />
    </LinearLayout>


    <ImageView
        android:id="@+id/divider_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gift_parent"
        android:layout_marginBottom="5dp"
        android:background="@drawable/area_divider" />

    <ImageView
        android:id="@+id/points_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/points" />

    <TextView
        android:id="@+id/gl_points_acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_two"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/points_icon"
        android:text="@string/five_thousand" />

    <ImageView
        android:id="@+id/divider_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gl_points_acc_text"
        android:layout_marginTop="10dp"
        android:background="@drawable/area_dark_divider" />

    <GridView
        android:id="@+id/gifts_list_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_three"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:numColumns="3"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="2dp"
         />

</RelativeLayout>