<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/profilebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/take_photo_bar" >

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/IDS_MESSAGE"
            android:textColor="@color/white_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cancel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/cancel_bg"
            android:gravity="center"
            android:text="@string/cancelTxt"
            android:textColor="@color/white_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/write_msg_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/chat_msg_bg"
        android:orientation="horizontal"
        android:weightSum="1" >

        <EditText
            android:id="@+id/write_msg_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.8"
            android:background="@drawable/chat_edit_box"
            android:hint="@string/write_msg_txt"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/post_btn"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.2"
            android:background="@drawable/post_btn"
            android:text="@string/post_txt" />
    </LinearLayout>

    <ListView
        android:id="@+id/chat_msg_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/write_msg_lay"
        android:layout_below="@id/profilebar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:dividerHeight="10dp"
        android:divider="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent" >
    </ListView>

</RelativeLayout>