<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/header_image"
        layout="@layout/header" />

    <RelativeLayout
        android:id="@+id/take_photo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_image" >

        <TextView
            android:id="@+id/cancel_btn_photo_album"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancelTxt"
            android:textColor="@color/font_blue_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/done_btn_photo_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/doneTxt"
            android:textColor="@color/font_blue_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/camera_roll_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/take_photo_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent" >

        <ListView
            android:id="@+id/album_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>
    </RelativeLayout>

    <TextView
        android:id="@+id/no_images"
        style="@style/BrownTextPhotoAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_images_txt"
        android:visibility="gone" />

</RelativeLayout>